Added USer DTO, Upgraded from email to userid, Added report functionality.